Changed to using a single file for entity saving